src/components/sbb-timetable-row/sbb-timetable-row.scss
@use '../../global/styles' as sbb;

// Default component properties, defined for :host. Properties which can not
// travel the shadow boundary are defined through this mixin
@include sbb.host-component-properties;

:host {
  --sbb-timetable-row-gap: var(--sbb-spacing-fixed-2x);
  --sbb-timetable-row-height: #{sbb.px-to-rem-build(25)};
  --sbb-timetable-row-height-header: #{sbb.px-to-rem-build(20)};
  --sbb-timetable-row-height-footer: #{sbb.px-to-rem-build(16)};
}

// override icons sizes
.sbb-timetable__row-transport-icon {
  --sbb-icon-svg-width: #{sbb.px-to-rem-build(20)};
  --sbb-icon-svg-height: #{sbb.px-to-rem-build(20)};
}

// override icons sizes
.sbb-travel-hints__item {
  --sbb-icon-svg-height: #{sbb.px-to-rem-build(14)};
}

// Design spec: icon should have specific size
.sbb-occupancy__item {
  --sbb-icon-svg-height: #{sbb.px-to-rem-build(12)};

  @include sbb.mq($from: medium) {
    --sbb-icon-svg-height: #{sbb.px-to-rem-build(16)};
  }
}

.sbb-screenreaderonly {
  @include sbb.screen-reader-only;
}

.sbb-timetable__row--quay {
  margin-inline-end: var(--sbb-spacing-fixed-1x);
}

// resets lists
ul {
  @include sbb.list-reset;

  display: inline-flex;
}

li {
  display: inline-flex;
  align-self: center;
}

.sbb-timetable__row-transport {
  align-self: center;
}

.sbb-timetable__row-transportnumber,
.sbb-timetable__row-time {
  @include sbb.text-s--bold;

  line-height: unset;
  white-space: nowrap;
  align-self: center;
}

.sbb-timetable__row {
  @include sbb.text-s--regular;

  display: flex;
  flex-direction: column;
  gap: var(--sbb-timetable-row-gap);
}

.sbb-timetable__row-header {
  display: flex;
  gap: var(--sbb-spacing-fixed-2x);
  align-items: center;
  line-height: var(--sbb-timetable-row-height-header);
}

.sbb-timetable__row-details,
.sbb-timetable__row-hints {
  display: inline-flex;
  gap: var(--sbb-spacing-fixed-1x);
  align-items: center;
}

.sbb-timetable__row-header p {
  @include sbb.ellipsis;

  margin: 0;
  align-self: center;
}

.sbb-timetable__row-footer {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  gap: var(--sbb-spacing-fixed-2x);
  line-height: var(--sbb-timetable-row-height-footer);

  > span {
    align-self: center;
  }

  :only-child {
    margin-inline-start: auto;
  }
}

.sbb-timetable__row-occupancy {
  gap: var(--sbb-spacing-fixed-2x);
}

.sbb-timetable__row-occupancy li {
  display: inline-flex;
  align-items: center;
  gap: var(--sbb-spacing-fixed-1x);
}

.sbb-timetable__row-quay--changed {
  color: var(--sbb-color-red-default);
}

.sbb-timetable__row-transport-wrapper,
.sbb-timetable__row-warning {
  display: inline-flex;
}

.sbb-loading {
  pointer-events: none;
}

.sbb-loading__wrapper {
  display: flex;
  flex-direction: column;
  gap: var(--sbb-spacing-fixed-2x);
}

.sbb-loading__row {
  width: 100%;
  border-radius: var(--sbb-border-radius-1x);
  height: var(--sbb-timetable-row-height);

  @include sbb.mq($from: medium) {
    height: #{sbb.px-to-rem-build(28)};
  }
}

.sbb-loading__row,
.sbb-loading__badge {
  animation: skeleton-pulse 1800ms ease-out infinite;
}

.sbb-loading__row:first-of-type {
  height: var(--sbb-timetable-row-height-header);
  width: 50%;
}

.sbb-loading__row:last-of-type {
  height: var(--sbb-timetable-row-height-footer);
}

.sbb-loading__badge {
  align-items: center;
  position: absolute;
  inset-block-start: 0;
  inset-inline-end: 0;
  padding-inline-end: var(--sbb-spacing-fixed-6x);
  border-end-start-radius: var(--sbb-border-radius-4x);

  // Left to right expression
  right: calc(var(--sbb-spacing-fixed-3x) * -1);
  transform: skew(16deg, 0deg);
  width: #{sbb.px-to-rem-build(115)};
  height: #{sbb.px-to-rem-build(20)};
}

@keyframes skeleton-pulse {
  0% {
    background: var(--sbb-color-cloud-default);
  }

  17% {
    background: var(--sbb-color-cloud-default);
  }

  50% {
    background: var(--sbb-color-milk-default);
  }

  67% {
    background: var(--sbb-color-milk-default);
  }

  100% {
    background: var(--sbb-color-cloud-default);
  }
}

